Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4369

HA backup brokers core dump in benchmark test.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • None
    • C++ Clustering
    • None

    Description

      Description of problem: Backup brokers in a HA cluster show errors and dump core.

      Version-Release number of selected component (if applicable):
      0.18-mrg branch: e0bd483
      trunk: f367a03

      How reproducible: 100%

      Steps to Reproduce:
      1. Start a 3 node HA cluster.
      2. run: qpid-cpp-benchmark --repeat 10 -b 20.0.10.33 --summarize -q 6 -s 3 -r 3 -m 1000 --connection-options

      {tcp-nodelay:false,reconnect:true,heartbeat:1}

      Actual results:
      Backup brokers core dump. Their logs show errors like :
      2012-10-12 11:16:56 [HA] error Backup queue benchmark-0: Execution error: not-found: Exchange not found: qpid.replicator-benchmark-0

      Expected results: No crash or errors on backups.

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: