QPID-4369: HA backup brokers core dump in benchmark test.

Was seeing core dumps with QueueReplicator::queue == 0. Caused by race
conditions when calling QueueReplicator::deactivate. Renamed deactivate to
destroy and call it only when the broker::Queue is destroyed.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1397676 13f79535-47bb-0310-9956-ffa450edef68